# paragone

./: Cargo.toml
mongo_db/: docker-compose.yaml
src/: main.rs
src/data_types/: product.rs
src/db/: db.rs  mod.rs  unique_id.rs
src/endpoints/: endpoints.rs  mod.rs  products.rs  stores.rs  tickets.rs
src/question/: question.rs
