[package]
name = "actix-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
futures = "0.3"
async-std = "1.12.0"
env_logger = "0.9.0"
log = "0.4.17"
mongodb = "2"

